--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -83,12 +83,12 @@ connect.name=Verbinden mit
 
 console.updatecheck.new_developmentversion=------------ Neue enwicklungs version heruntergeladen ------------
 
-createshortcut.description=Erstellt eine Desktop-Verknüfung dieses Folders
+createshortcut.description=Erstellt eine Desktop-Verkn\u00fcfung dieses Folders
 createshortcut.key=C
-createshortcut.name=Desktop-Verknüfpung erstellen
+createshortcut.name=Desktop-Verkn\u00fcfpung erstellen
 
-delete_confimation.busy.description=Lösche Datei(en)
-delete_confimation.busy.title=Lösche Datei(en)
+delete_confimation.busy.description=L\u00f6sche Datei(en)
+delete_confimation.busy.title=L\u00f6sche Datei(en)
 delete_confimation.text=Sind Sie sicher die foldenden Dateien zu l\u00f6schen?\:\n (Hinweis\: Die Dateien werden nicht in den Papierkorb verschoben).
 delete_confimation.text_movetorecyclebin=M\u00f6chten Sie die folgenden Dateien wirklich in den PowerFolder Papierkorb schieben?
 delete_confimation.text_movetorecyclebin_DIR=<VERZ>
@@ -112,7 +112,7 @@ dialog.connect.connecting=Verbinde
 dialog.connect.connecting_to=Verbinde zu {0}...
 dialog.connection_problem=Verbindungsproblem
 dialog.synchronization.choose=Bitte die Synchronisationoption ausw\u00e4hlen
-dialog.synchronization.receive_changes=Änderunge erhalten
+dialog.synchronization.receive_changes=\u00c4nderunge erhalten
 dialog.synchronization.send_and_receive_changes=\u00c4nderungen ver\u00f6ffentlichen und neue erhalten
 dialog.synchronization.send_own_changes=\u00c4nderugen nur ver\u00f6ffentlichen
 dialog.synchronization.sychronizing=Synchronisiere...
@@ -148,7 +148,7 @@ downloadfile.unable_to_download=Kann nicht herunterladen
 empty_recycle_bin.description=PowerFolder Papierkorb leeren
 empty_recycle_bin.key=L
 empty_recycle_bin.name=Leeren
-empty_recycle_bin.working.description=Lösche Datei(en)
+empty_recycle_bin.working.description=L\u00f6sche Datei(en)
 empty_recycle_bin.working.title=Papierkorb leeren
 
 empty_recycle_bin_confimation.text=M\u00f6chten Sie den PowerFolder Papierkorb wirklich leeren?
@@ -201,10 +201,10 @@ findfriends.key=F
 findfriends.name=Freunde finden
 
 folder.check_path_length.never_show_again=Nicht mehr fragen
-folder.check_path_length.text=Der Pfad zur Datei ist länger als 255 Zeichen.\nDies wird nicht empfohlen, weil es zu Problem unter manchen Betriebssystem wie z.B. Windows 2000 kommen kann.\n\nFolder\: {0}\nDatei\: {1}
+folder.check_path_length.text=Der Pfad zur Datei ist l\u00e4nger als 255 Zeichen.\nDies wird nicht empfohlen, weil es zu Problem unter manchen Betriebssystem wie z.B. Windows 2000 kommen kann.\n\nFolder\: {0}\nDatei\: {1}
 folder.check_path_length.title=Pfad zu lang
 folder.check_subdirectory_and_filename_length.never_show_again=Nicht mehr fragen
-folder.check_subdirectory_and_filename_length.text=Der Datei- oder Verzeichnisname ist länger als 30 Zeichen.\nDies kann auf manchen Betriebssystem wie z.B. Mac OS classic zu Problemen führen.\n\nFolder\: {0}\nDatei\: {1}
+folder.check_subdirectory_and_filename_length.text=Der Datei- oder Verzeichnisname ist l\u00e4nger als 30 Zeichen.\nDies kann auf manchen Betriebssystem wie z.B. Mac OS classic zu Problemen f\u00fchren.\n\nFolder\: {0}\nDatei\: {1}
 folder.check_subdirectory_and_filename_length.title=Datei- oder Verzeichnisname zu lang
 folder.members.synchronisation_panel.folder_size=Folder Gr\u00f6sse
 folder.members.synchronisation_panel.local_size=Lokal Gr\u00f6sse
@@ -217,9 +217,9 @@ foldercreate.dialog.title=Folder erstellen
 foldercreate.dirempty.text=Bitte w\u00e4hlen Sie den Speicherort f\u00fcr den Inhalt des Folders\!
 foldercreate.dirempty.title=Speicherort nicht gesetzt
 foldercreate.error.already_taken=Verzeichnis von '{0}' schon verwendet\n'{1}'
-foldercreate.error.it_is_base_dir=Kann Folder nicht im Verzeichnis '{0}' erstellen. Dies ist das Basis-Verzeichnis für alle Folder\!
+foldercreate.error.it_is_base_dir=Kann Folder nicht im Verzeichnis '{0}' erstellen. Dies ist das Basis-Verzeichnis f\u00fcr alle Folder\!
 foldercreate.error.unable_to_create=Kann Verzeichnis '{0}' nicht erstellen.
-foldercreate.error.unable_to_open=Kann Verzeichniss '{0}' nicht öffnen. Es scheint eine Datei zu sein\!
+foldercreate.error.unable_to_open=Kann Verzeichniss '{0}' nicht \u00f6ffnen. Es scheint eine Datei zu sein\!
 foldercreate.key=s
 foldercreate.name=Neuen Folder
 foldercreate.nameempty.text=Bitte einen Speicherort angeben\!
@@ -246,7 +246,7 @@ folderjoin.secret=geheim
 folderjoin.warning.notempty.text=Der von Ihnen angegebene Ort des Folders '{0}' ist nicht leer.\nAlle dort befindlichen Dateien werden freigegeben\!\nSind Sie sicher das Folder an diesem Ort \n'{1}' anzulegen ?
 folderjoin.warning.notempty.title=Lokales Verzeichnis nicht leer
 
-folderjoinleave.description=Tritt oder Verlässt einen Folder
+folderjoinleave.description=Tritt oder Verl\u00e4sst einen Folder
 folderjoinleave.join=Folder beitreten
 folderjoinleave.key=F
 folderjoinleave.leave=Folder verlassen
@@ -263,29 +263,29 @@ folderpanel.hometab.choose_sync_profile=Bitte w\u00e4hlen Sie das Synchronisatio
 folderpanel.hometab.folder_type=Folder Typ
 folderpanel.hometab.local_folder_location=Lokales Verzeichnis
 folderpanel.hometab.local_size=Lokale Gr\u00f6sse
-folderpanel.hometab.number_of_available_files_at_other_members=Verfügbare Dateien bei anderen Mitgliedern
-folderpanel.hometab.number_of_deleted_files_in_folder=Anzahl der gelöschen Dateien
+folderpanel.hometab.number_of_available_files_at_other_members=Verf\u00fcgbare Dateien bei anderen Mitgliedern
+folderpanel.hometab.number_of_deleted_files_in_folder=Anzahl der gel\u00f6schen Dateien
 folderpanel.hometab.number_of_local_files_in_folder=Anzahl der lokalen Datein 
 folderpanel.hometab.public_folder=\u00d6ffentlich
 folderpanel.hometab.secret_folder=Geheim
 folderpanel.hometab.synchronisation_eta=Bis Synchronisation fertig
 folderpanel.hometab.synchronisation_percentage=Synchronisation
 folderpanel.hometab.title=Info
-folderpanel.hometab.total_number_of_files=Alle Dateien (lokal+gelösch+verfügbar)
+folderpanel.hometab.total_number_of_files=Alle Dateien (lokal+gel\u00f6sch+verf\u00fcgbar)
 folderpanel.hometab.total_size=Gr\u00f6sse (Total)
 folderpanel.settingstab.add_a_pattern.example=beispiel/*.jpg
-folderpanel.settingstab.add_a_pattern.text=Geben Sie ein Muster für den Ausschluss von Dateien an
-folderpanel.settingstab.add_a_pattern.title=Muster hinzufügen
-folderpanel.settingstab.addbutton.description=Neues Muster zum Ausschluss von Dateien hinzufügen
+folderpanel.settingstab.add_a_pattern.text=Geben Sie ein Muster f\u00fcr den Ausschluss von Dateien an
+folderpanel.settingstab.add_a_pattern.title=Muster hinzuf\u00fcgen
+folderpanel.settingstab.addbutton.description=Neues Muster zum Ausschluss von Dateien hinzuf\u00fcgen
 folderpanel.settingstab.addbutton.key=H
-folderpanel.settingstab.addbutton.name=Hinzufügen
-folderpanel.settingstab.edit_a_pattern.text=Bearbeiten Sie das Muster für den Ausschluss von Dateien
-folderpanel.settingstab.edit_a_pattern.title=Muster ändern
-folderpanel.settingstab.editbutton.description=Muster ändern
-folderpanel.settingstab.editbutton.key=Ä
-folderpanel.settingstab.editbutton.name=Ändern
-folderpanel.settingstab.ignorepatterns=Datei Ausschlüsse
-folderpanel.settingstab.removebutton.description=Löscht das Muster für den Ausschluss von Dateien
+folderpanel.settingstab.addbutton.name=Hinzuf\u00fcgen
+folderpanel.settingstab.edit_a_pattern.text=Bearbeiten Sie das Muster f\u00fcr den Ausschluss von Dateien
+folderpanel.settingstab.edit_a_pattern.title=Muster \u00e4ndern
+folderpanel.settingstab.editbutton.description=Muster \u00e4ndern
+folderpanel.settingstab.editbutton.key=\u00c4
+folderpanel.settingstab.editbutton.name=\u00c4ndern
+folderpanel.settingstab.ignorepatterns=Datei Ausschl\u00fcsse
+folderpanel.settingstab.removebutton.description=L\u00f6scht das Muster f\u00fcr den Ausschluss von Dateien
 folderpanel.settingstab.removebutton.key=E
 folderpanel.settingstab.removebutton.name=Entfernen
 folderpanel.settingstab.title=Einstellungen
@@ -429,8 +429,8 @@ myfolderstable.syncprofile=Sync Profil
 myfolderstable.total_size=Totale Gr\u00f6sse
 myfolderstable.type=Typ
 
-navigationbuttons.back=Zurück
-navigationbuttons.back_to=Zurück zu {0}
+navigationbuttons.back=Zur\u00fcck
+navigationbuttons.back_to=Zur\u00fcck zu {0}
 navigationbuttons.forward=Vor
 navigationbuttons.forward_to=Vor zu {0}
 navigationbuttons.up=Hoch
@@ -455,11 +455,11 @@ navtree.title=Navigation
 nodeinfo.error=Information \u00fcber den Benutzer nicht m\u00f6glich
 nodeinfo.requesting=Erwarte Benutzerinformationen...
 
-onepublicfolderpanel.estimated_size_in_files=Geschätzte Größe\: {0} Dateien ({1})
+onepublicfolderpanel.estimated_size_in_files=Gesch\u00e4tzte Gr\u00f6\u00dfe\: {0} Dateien ({1})
 onepublicfolderpanel.file_list_not_found=Dateiliste nicht gefunden
 onepublicfolderpanel.no_one_online_found=Kein Mitglied dieses Folders online gefunden, probiere trotzdem...
 onepublicfolderpanel.private=privat
-onepublicfolderpanel.public=öffentlich
+onepublicfolderpanel.public=\u00f6ffentlich
 onepublicfolderpanel.searching_filelist_in_network=Suche Dateiliste im Netzwerk...
 onepublicfolderpanel.this_may_take_up_to_2_minutes=Dies kann bis zu zwei Minuten dauern
 onepublicfolderpanel.unable_to_connect_to_a_source=Kann zu keiner Quelle verbinden
@@ -504,15 +504,15 @@ preferences.dialog.basedir=Standard Speicherort f\u00fcr neue Folder
 preferences.dialog.basedir.title=W\u00e4hlen Sie den standardm\u00e4\u00dfigen Speicherort f\u00fcr neue Folder
 preferences.dialog.bind=Anschluss adresse
 preferences.dialog.bind.any=Irgendeine
-preferences.dialog.bind.tooltip=Wählt die Adresse aus, die PowerFolder benutzt 
+preferences.dialog.bind.tooltip=W\u00e4hlt die Adresse aus, die PowerFolder benutzt 
 preferences.dialog.bindDescr=Anschluss Beschreibung
 preferences.dialog.colortheme=PowerFolder Thema
 preferences.dialog.createdesktopshortcuts=Link auf dem Desktop anlegen
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Meldung wenn ein Benutzer einen Folder betritt, der nicht auf der Freundesliste steht. 
 preferences.dialog.dialogs.title=Dialoge
-preferences.dialog.dialogs.warnoncloseifnotinsync=Warnung beim Schliessen von PowerFolder, wenn die Synchronisation noch nicht abgeschlossen ist
-preferences.dialog.dialogs.warnonlimitedconnectivity=Warnung eingeschränkter Konnektivität 
-preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warnung bei möglichen Dateinames-Problem
+preferences.dialog.dialogs.warnoncloseifnotinsync=Beim Schliessen warnen, wenn die Synchronisation noch nicht abgeschlossen ist
+preferences.dialog.dialogs.warnonlimitedconnectivity=Warnung eingeschr\u00e4nkter Konnektivit\u00e4t 
+preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warnung bei m\u00f6glichen Problem mit Dateinamen
 preferences.dialog.dyndns=Meine (dynamische) Adresse
 preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
 preferences.dialog.dyndns.title=DynDNS
@@ -541,8 +541,8 @@ preferences.dialog.network.title=Netzwerk
 preferences.dialog.networkmode.lanonly=Nur LAN
 ##preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
 preferences.dialog.networkmode.private=Privates Netz   
-##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so finding of your friends in the network is posible.</BODY></HTML>
-preferences.dialog.networkmode.public=Öffentlich
+##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so finding of your friends in the network is possible.</BODY></HTML>
+preferences.dialog.networkmode.public=\u00d6ffentlich
 ##preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Enables public Folder sharing.<BR>Private folders will always require an Invitation, regardless of the networking mode.</BODY></HTML>
 preferences.dialog.nickname=Benutzername
 preferences.dialog.nonwindowsinfo=Hinweis\: Einige Einstellung sind nur Benutzern von Windows m\u00f6glich\!
@@ -575,16 +575,16 @@ preferences.dialog.xbehavior.minimize=in den System Tray minimieren
 preferences.key=p
 preferences.name=Einstellungen
 
-previewfiles.description=Dateivorschau für diesen Folder
+previewfiles.description=Dateivorschau f\u00fcr diesen Folder
 previewfiles.key=V
 previewfiles.name=Vorschau
 
 publicfolders.filter.show_empty_folders=Zeige leere Folder
-publicfolders.lastModified=Zuletz geändert
-publicfolders.last_activity=Letze Aktivität
+publicfolders.lastModified=Zuletz ge\u00e4ndert
+publicfolders.last_activity=Letze Aktivit\u00e4t
 publicfolders.members=Mitglieder
 publicfolders.number_of_files=Dateien
-publicfolders.size=Größe
+publicfolders.size=Gr\u00f6\u00dfe
 
 quickinfo.download.active={0} aktive Download(s)
 quickinfo.download.completed={0} Download(s) k\u00fcrzlich fertiggestellt
@@ -640,7 +640,7 @@ requestfilelist.description=Erneuert die Dateiliste des Folders
 requestfilelist.key=f
 requestfilelist.name=Neue Dateiliste anfordern
 
-requestnetfolderlist.description=Vordert die Liste der öffentlichen Folder neu an
+requestnetfolderlist.description=Vordert die Liste der \u00f6ffentlichen Folder neu an
 requestnetfolderlist.key=E
 requestnetfolderlist.name=Liste erneuern
 
@@ -727,12 +727,12 @@ systray.hide=Verstecken
 systray.powerfolder=PowerFolder v{0}
 systray.show=Anzeigen
 systray.syncall=Jetzt Synchronisieren
-##systray.tooltip.down=DOWN {0} KBs
-##systray.tooltip.down.mb=DOWN {0} MBs
+##systray.tooltip.down=Down {0} KBs
+##systray.tooltip.down.mb=Down {0} MBs
 systray.tooltip.insync=Synchronisiert
 systray.tooltip.syncing=Synchronisiere...
-##systray.tooltip.up=UP {0} KBs
-##systray.tooltip.up.mb=UP {0} MBs
+##systray.tooltip.up=Up {0} KBs
+##systray.tooltip.up.mb=Up {0} MBs
 
 ##title.friends=Friends
 title.my.folders=Meine Folder 
@@ -753,7 +753,7 @@ transfers.requested=angefordert
 transfers.searching=Suche...
 transfers.to=Zu
 
-unignorefile.description=Datei(en) werden werden wieder verfügbar gemacht (von der Ausschlussliste entfernt)
+unignorefile.description=Datei(en) werden werden wieder verf\u00fcgbar gemacht (von der Ausschlussliste entfernt)
 unignorefile.key=V
 unignorefile.name=Dateien wiedereinschliessen 
 
