--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -541,7 +541,7 @@ preferences.dialog.language=Idioma
 ##preferences.dialog.networkmode.lanonly=LAN only
 ##preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
 ##preferences.dialog.networkmode.private=Private Networking   
-##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so finding of your friends in the network is posible.</BODY></HTML>
+##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so finding of your friends in the network is possible.</BODY></HTML>
 ##preferences.dialog.networkmode.public=Public Networking
 ##preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Enables public Folder sharing.<BR>Private folders will always require an Invitation, regardless of the networking mode.</BODY></HTML>
 preferences.dialog.nickname=Apodo
@@ -727,12 +727,12 @@ systray.exit=Salir
 systray.powerfolder=PowerFolder v{0}
 systray.show=Mostrar
 ##systray.syncall=Sync Folders
-##systray.tooltip.down=DOWN {0} KBs
-##systray.tooltip.down.mb=DOWN {0} MBs
+##systray.tooltip.down=Down {0} KBs
+##systray.tooltip.down.mb=Down {0} MBs
 ##systray.tooltip.insync=InSync
 ##systray.tooltip.syncing=Syncing
-##systray.tooltip.up=UP {0} KBs
-##systray.tooltip.up.mb=UP {0} MBs
+##systray.tooltip.up=Up {0} KBs
+##systray.tooltip.up.mb=Up {0} MBs
 
 ##title.friends=Friends
 title.my.folders=Mis carpetas 
@@ -756,14 +756,6 @@ transfers.to=Para
 ##unignorefile.description=File(s) will be downloaded/shared again
 ##unignorefile.key=U
 ##unignorefile.name=Remove from Ignore
-
-##webservice_request_folder_join.description=Requests the PowerFolder service to join this folder
-##webservice_request_folder_join.key=w
-##webservice_request_folder_join.name=Request WebStore
-
-##webservice_request_folder_leave.description=Requests the PowerFolder service to leave this folder
-##webservice_request_folder_leave.key=q
-##webservice_request_folder_leave.name=Quit WebStore
 
 ##wizard.basicsetup.enternick=Please enter your nickname
 ##wizard.basicsetup.lanonly=LAN only
