--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -84,6 +84,7 @@ connect.name=\u0421\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u0435 \u0441
 console.updatecheck.new_developmentversion=------------ \u041d\u043e\u0432\u0430\u044f \u0432\u0435\u0440\u0441\u0438\u044f \u0441\u043a\u0430\u0447\u0435\u043d\u0430 ------------
 
 createshortcut.description=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u044f\u0440\u043b\u044b\u043a \u0434\u043b\u044f \u044d\u0442\u043e\u0439 \u043f\u0430\u043f\u043a\u0438 \u043d\u0430 \u0440\u0430\u0431\u043e\u0447\u0435\u043c \u0441\u0442\u043e\u043b\u0435
+##createshortcut.key=C
 createshortcut.name=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u044f\u0440\u043b\u044b\u043a \u043d\u0430 \u0440\u0430\u0431\u043e\u0447\u0435\u043c \u0441\u0442\u043e\u043b\u0435
 
 delete_confimation.busy.description=\u0423\u0434\u0430\u043b\u0435\u043d\u0438\u0435 \u0444\u0430\u0439\u043b\u043e\u0432
@@ -274,6 +275,7 @@ folderpanel.hometab.total_number_of_files=\u0412\u0441\u0435\u0433\u043e \u0444\
 folderpanel.hometab.total_size=\u041e\u0431\u0448\u0438\u0439 \u0440\u0430\u0437\u043c\u0435\u0440
 folderpanel.settingstab.add_a_pattern.example=example/*.jpg
 folderpanel.settingstab.add_a_pattern.text=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043c\u044f \u0434\u043b\u044f \u0438\u0441\u043a\u043b\u044e\u0447\u0435\u043d\u0438\u044f \u0444\u0430\u0439\u043b\u043e\u0432 \u0438\u0437 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438
+##folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
 folderpanel.settingstab.addbutton.description=\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u0438\u043c\u044f \u0434\u043b\u044f \u0438\u0441\u043a\u043b\u044e\u0447\u0435\u043d\u0438\u044f \u0444\u0430\u0439\u043b\u043e\u0432 \u0438\u0437 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438
 folderpanel.settingstab.addbutton.key=A
 folderpanel.settingstab.addbutton.name=\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c
@@ -384,6 +386,7 @@ linespeed.adsl256=DSL 256Kbit upload
 linespeed.adsl512=DSL 512Kbit upload
 linespeed.adsl768=DSL 768Kbit upload
 linespeed.customspeed=\u0414\u0440\u0443\u0433\u043e\u0435
+##linespeed.downloadspeed=Download limit
 linespeed.isdnspeed128=ISDN 128Kbit
 linespeed.isdnspeed64=ISDN 64Kbit
 linespeed.lan10=LAN 10mbit/s upload
@@ -700,6 +703,9 @@ startdownloads.description=\u041e\u0442\u043a\u0440\u044b\u0432\u0430\u0435\u044
 startdownloads.key=s
 startdownloads.name=\u041e\u0442\u043a\u0440\u044b\u0442\u044c
 
+##status.download=Down\: %.2f KB/s
+##status.upload=Up\: %.2f KB/s
+
 synchronisation.notice.title=\u0410\u043a\u0442\u0438\u0432\u043d\u044b\u0439 \u043f\u0440\u043e\u0444\u0438\u043b\u044c \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438 {0}
 synchronisation.warning.automatic_deletions=\u042d\u0442\u043e\u0442 \u0440\u0435\u0436\u0438\u043c \u0442\u0430\u043a \u0436\u0435 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u0443\u0435\u0442 \u0443\u0434\u0430\u043b\u0435\u043d\u0438\u044f\!\n\u041f\u0440\u043e\u0434\u043e\u043b\u0436\u0438\u0442\u044c ?
 synchronisation.warning.automatic_deletions_notice=\u042d\u0442\u043e\u0442 \u0440\u0435\u0436\u0438\u043c \u0442\u0430\u043a \u0436\u0435 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u0443\u0435\u0442 \u0443\u0434\u0430\u043b\u0435\u043d\u0438\u044f\!
@@ -722,9 +728,11 @@ systray.powerfolder=PowerFolder v{0}
 systray.show=\u041e\u0442\u043a\u0440\u044b\u0442\u044c
 systray.syncall=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u041f\u0430\u043f\u043a\u0438
 systray.tooltip.down=DOWN {0} \u041a\u0431/\u0441
+##systray.tooltip.down.mb=Down {0} MBs
 systray.tooltip.insync=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u043e\u0432\u0430\u043d\u043e
 systray.tooltip.syncing=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u0443\u0435\u0442\u0441\u044f
 systray.tooltip.up=UP {0} \u041a\u0431/\u0441
+##systray.tooltip.up.mb=Up {0} MBs
 
 title.friends=\u0414\u0440\u0443\u0437\u044c\u044f
 title.my.folders=\u041c\u043e\u0438 \u041f\u0430\u043f\u043a\u0438
@@ -748,14 +756,6 @@ transfers.to=\u041a
 unignorefile.description=\u0424\u0430\u0439\u043b\u044b \u0431\u0443\u0434\u0443\u0442 \u043e\u043f\u044f\u0442\u044c \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u043e\u0432\u0430\u0442\u044c\u0441\u044f
 unignorefile.key=U
 unignorefile.name=\u0412\u0435\u0440\u043d\u0443\u0442\u044c \u043d\u0430 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u044e
-
-webservice_request_folder_join.description=\u0417\u0430\u043f\u0440\u043e\u0441\u0438\u0442\u044c \u0441\u0435\u0440\u0432\u0438\u0441 PowerFolder-\u0430 \u043f\u043e\u0434\u043a\u043b\u044e\u0447\u0438\u0442\u044c\u0441\u044f \u043a \u044d\u0442\u043e\u0439 \u041f\u0430\u043f\u043a\u0435
-webservice_request_folder_join.key=w
-webservice_request_folder_join.name=\u0417\u0430\u043f\u0440\u043e\u0441\u0438\u0442\u044c \u041f\u0430\u043f\u043a\u0443
-
-webservice_request_folder_leave.description=\u0417\u0430\u043f\u0440\u043e\u0441\u0438\u0442\u044c \u0441\u0435\u0440\u0432\u0438\u0441 PowerFolder-\u0430 \u043f\u043e\u043a\u0438\u043d\u0443\u0442\u044c \u044d\u0442\u0443 \u041f\u0430\u043f\u043a\u0443
-webservice_request_folder_leave.key=q
-webservice_request_folder_leave.name=\u041f\u043e\u043a\u0438\u043d\u0443\u0442\u044c \u041f\u0430\u043f\u043a\u0443
 
 wizard.basicsetup.enternick=\u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u0432\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043c\u044f \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f
 wizard.basicsetup.lanonly=\u0422\u043e\u043b\u044c\u043a\u043e \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u0430\u044f \u0441\u0435\u0442\u044c
@@ -796,4 +796,30 @@ wizard.projectsync.selectlocaldirectory=\u0412\u044b\u0431\u0435\u0440\u0438\u04
 wizard.projectsync.setupsync=\u041d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438 \u043f\u0440\u043e\u0435\u043a\u0442\u0430
 wizard.projectsync.successjoin=\u0412\u044b \u0443\u0441\u043f\u0435\u0448\u043d\u043e \u043f\u0440\u0438\u0441\u043e\u0435\u0434\u0438\u043d\u0438\u043b\u0438\u0441\u044c \u043a \u043f\u0440\u043e\u0435\u043a\u0442\u0443\!
 wizard.projectsync.takepartsync=\u041f\u0440\u0438\u043d\u044f\u0442\u044c \u0443\u0447\u0430\u0441\u0442\u0438\u044f \u0432 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438 \u043f\u0440\u043e\u0435\u043a\u0442\u0430
-wizard.projectsync.title=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u043 
+wizard.projectsync.title=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0434
+##wizard.sendinvitations.create=To create one now, select the filename below
+##wizard.sendinvitations.joinsync=Invitation files are required to join a synchronization
+##wizard.sendinvitations.neveruntrusted=Never give out invitation files to untrusted people
+##wizard.sendinvitations.passwdasfile=It is similar to a password, but stored as file
+##wizard.sendinvitations.savefile=Save invitation file
+##wizard.sendinvitations.title=Save invitation
+##wizard.setupdns.dyndnshomepage=Dyndns Homepage
+##wizard.setupdns.enterdns=Enter your (dynamic) dns
+##wizard.setupdns.improvesread=It improves your reachability. However this is not required
+##wizard.setupdns.nodnssetup=You did not setup a (dynamic) dns address yet\!
+##wizard.setupdns.title=Setup (dynamic) dns
+##wizard.setupsuccess=Setup successfully
+##wizard.syncpcspanel.folderjoinsuccess=You successfully joined a folder synchronization\!\n
+##wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder synchronization\!\n
+##wizard.syncpcspanel.pcsjoin=Other computers can join this folder now
+##wizard.syncpcspanel.select=Please select the directory, which should be synced
+##wizard.syncpcspanel.selecttarget=Please select local target directory
+##wizard.syncpcspanel.setup=Setup a new synchronization
+##wizard.syncpcspanel.takepart=Take part in a synchronization
+##wizard.syncpcspanel.title=Synchronize PCs
+##wizard.whattodo.bordertext=Choose your action
+##wizard.whattodo.filesharing=Share Files
+##wizard.whattodo.openonlinedocumentation=Open Online Documentation
+##wizard.whattodo.projectwork=Synchronize Project
+##wizard.whattodo.syncpcs=Synchronize PCs
+##wizard.whattodo.title=What do you want to do ?
