--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -379,7 +379,6 @@ joinfolder.already_joined_title=Niet mogelijk lid te worden {0}
 limitedconnection.text=PowerFolder heeft gelimiteerde verbinding naar het netwerk gedetecteerd.\nDit kan worden veroorzaakt door een firewall, router of "delen van bestanden met Windows".\nLees de FAQ om de verbindingen te verbeteren.\nhttp\://www.powerfolder.com
 limitedconnection.title=Beperkte connectie
 
-
 linespeed.T1=T1 (1.544mbit)
 linespeed.T3=T3 (43.232mbit)
 linespeed.adsl128=DSL 1000 (128Kbit up)
@@ -728,12 +727,12 @@ systray.hide=Verberg
 systray.powerfolder=PowerFolder v{0}
 systray.show=Show
 systray.syncall=Sync Folders
-systray.tooltip.down=DOWN {0} KBs
-systray.tooltip.down.mb=DOWN {0} MBs
+systray.tooltip.down=Down {0} KBs
+systray.tooltip.down.mb=Down {0} MBs
 systray.tooltip.insync=InSync
 systray.tooltip.syncing=Syncing
-systray.tooltip.up=UP {0} KBs
-systray.tooltip.up.mb=UP {0} MBs
+systray.tooltip.up=Up {0} KBs
+systray.tooltip.up.mb=Up {0} MBs
 
 title.friends=Vrienden
 title.my.folders=Mijn Folders 
@@ -757,14 +756,6 @@ transfers.to=Naar
 unignorefile.description=Bestand zal weer worden gedownload/gedeeld
 unignorefile.key=l
 unignorefile.name=Verwijder uit uitzonderingslijst
-
-webservice_request_folder_join.description=Vraag de PowerFolder webstore service om lid the worden van deze folder.
-webservice_request_folder_join.key=w
-webservice_request_folder_join.name=Vraag Webstore aan
-
-webservice_request_folder_leave.description=Stop delen van deze folder met de PowerFolder Webstore
-webservice_request_folder_leave.key=s
-webservice_request_folder_leave.name=Stop WebStore
 
 wizard.basicsetup.enternick=Voer gebruikersnaam in
 wizard.basicsetup.lanonly=Alleen LAN
