--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -139,10 +139,6 @@ disablesilentmode.description=\u30b5\u30a4\u30ec\u30f3\u30c8\u30e2\u30fc\u30c9\u
 disablesilentmode.key=W
 disablesilentmode.name=\u5fa9\u5e30\uff01(W)
 
-donotdownloadfile.description=\u3053\u306e\u30d5\u30a1\u30a4\u30eb\u3092 \u201d\u81ea\u52d5\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u540c\u671f\u65b9\u5f0f\u306e\u969b\u3067\u3082\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u306a\u3044\u201d\u3082\u306e\u3068\u3057\u3066\u30de\u30fc\u30af\u4ed8\u3051
-donotdownloadfile.key=D
-donotdownloadfile.name=\u81ea\u52d5\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u306a\u3044(D)
-
 downloadfile.description=\u9078\u629e\u30d5\u30a1\u30a4\u30eb\uff08\u307e\u305f\u306f\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u5185\u306e\u30d5\u30a1\u30a4\u30eb\uff09\u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3001\u524a\u9664\u6e08\u307f\u30d5\u30a1\u30a4\u30eb\u306e\u5834\u5408\u306f\u518d\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9
 downloadfile.failed.sourcenotfound=\u30d5\u30a1\u30a4\u30eb {0} \u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u4e0d\u53ef\u3001\u30bd\u30fc\u30b9\u672a\u691c\u51fa\u3002
 downloadfile.key=D
@@ -168,7 +164,6 @@ filecopier.progressdialog.title=\u30d5\u30a1\u30a4\u30eb\u30b3\u30d4\u30fc\u306e
 fileinfo.availability=\u53d6\u5f97\u53ef\u80fd\u5148
 fileinfo.available=\u53d6\u5f97\u53ef
 fileinfo.deleted=\u524a\u9664\u6e08
-fileinfo.donotautodownload=\u81ea\u52d5\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u306a\u3044
 fileinfo.downloading=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u4e2d
 fileinfo.downloading_from_member={0} \u304b\u3089\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u4e2d
 fileinfo.expected=\u671f\u5f85
@@ -278,7 +273,6 @@ folderpanel.hometab.synchronisation_percentage=\u540c\u671f\u5272\u5408
 folderpanel.hometab.title=\u30db\u30fc\u30e0
 folderpanel.hometab.total_number_of_files=\u5408\u8a08\u30d5\u30a1\u30a4\u30eb\u6570\uff08\u30ed\u30fc\u30ab\u30eb\uff0b\u524a\u9664\u6e08\uff0b\u53d6\u5f97\u53ef\uff09
 folderpanel.hometab.total_size=\u5408\u8a08\u30b5\u30a4\u30ba
-folderpanel.hometab.total_synchronisation_percentage=\u5408\u8a08\u540c\u671f\u5272\u5408
 folderpanel.settingstab.add_a_pattern.example=\u5165\u529b\u4f8b/*.jpg
 folderpanel.settingstab.add_a_pattern.text=\u540c\u671f\u5bfe\u8c61\u304b\u3089\u30d5\u30a1\u30a4\u30eb\u3092\u9664\u5916\u3059\u308b\u305f\u3081\u306e\u30d1\u30bf\u30fc\u30f3\u3092\u5165\u529b
 folderpanel.settingstab.add_a_pattern.title=\u7121\u8996\u5bfe\u8c61\u30d1\u30bf\u30fc\u30f3\u306e\u8ffd\u52a0
@@ -392,6 +386,7 @@ linespeed.adsl256=DSL \u4e0a\u308a\u901a\u4fe1\u901f\u5ea6 \u6700\u5927 256Kbit
 linespeed.adsl512=DSL \u4e0a\u308a\u901a\u4fe1\u901f\u5ea6 \u6700\u5927 512Kbit    
 linespeed.adsl768=DSL \u4e0a\u308a\u901a\u4fe1\u901f\u5ea6 \u6700\u5927 768Kbit    
 linespeed.customspeed=\u901f\u5ea6\u4efb\u610f\u6307\u5b9a
+linespeed.downloadspeed=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u901f\u5ea6\u4e0a\u9650
 linespeed.isdnspeed128=ISDN 128Kbit
 linespeed.isdnspeed64=ISDN 64Kbit
 linespeed.lan10=LAN \u4e0a\u308a\u901a\u4fe1\u901f\u5ea6 10mbit/s 
@@ -399,7 +394,6 @@ linespeed.lan100=LAN \u4e0a\u308a\u901a\u4fe1\u901f\u5ea6 100mbit/s
 linespeed.lan1000=LAN \u4e0a\u308a\u901a\u4fe1\u901f\u5ea6 1000mbit/s 
 linespeed.unlimited=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u901f\u5ea6\u7121\u5236\u9650
 linespeed.uploadspeed=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u901f\u5ea6\u4e0a\u9650
-linespeed.downloadspeed=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u901f\u5ea6\u4e0a\u9650
 
 linktoclipboard.description=\u30af\u30ea\u30c3\u30af\u53ef\u80fd\u306a PowerFolder \u30ea\u30f3\u30af\u3092\u30af\u30ea\u30c3\u30d7\u30dc\u30fc\u30c9\u306b\u30b3\u30d4\u30fc\u3001\u4ed6\u30e6\u30fc\u30b6\u30fc\u304c\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306b\u53c2\u52a0\u3057\u3066\u9078\u629e\u30d5\u30a1\u30a4\u30eb\u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u53ef\u80fd\u306b\u3059\u308b\u305f\u3081\u306b\u4f7f\u7528
 linktoclipboard.key=C
@@ -504,7 +498,7 @@ pluginsettings.name=\u8a2d\u5b9a(S)
 preferences.description=\u8a2d\u5b9a\u753b\u9762\u3092\u958b\u304f
 preferences.dialog.advPort=\u30dd\u30fc\u30c8
 preferences.dialog.advPort.tooltip=PowerFolder \u304c\u4f7f\u7528\u3059\u308b\u63a5\u7d9a\u5f85\u3061\u53d7\u3051\u30dd\u30fc\u30c8\u3092\u8907\u6570\u6307\u5b9a\u3059\u308b\u5834\u5408\u306f "," \u3067\u533a\u5207\u3063\u3066\u304f\u3060\u3055\u3044
-preferences.dialog.advancedSettingsTabbedPane=\u8a73\u7d30\u8a2d\u5b9a
+##preferences.dialog.advanced.title=Advanced
 preferences.dialog.autostartleechfiles=\u5916\u90e8 P2P \u306e\u81ea\u52d5\u30b9\u30bf\u30fc\u30c8
 preferences.dialog.basedir=\u53c2\u52a0\u30d5\u30a9\u30eb\u30c0\u7528\u57fa\u672c\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
 preferences.dialog.basedir.title=\u30c7\u30d5\u30a9\u30eb\u30c8\u306e\u57fa\u672c\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u306e\u9078\u629e
@@ -519,19 +513,17 @@ preferences.dialog.dialogs.title=\u30dd\u30c3\u30d7\u30a2\u30c3\u30d7
 preferences.dialog.dialogs.warnoncloseifnotinsync=\u30d7\u30ed\u30b0\u30e9\u30e0\u3092\u9589\u3058\u308b\u969b\u30d5\u30a9\u30eb\u30c0\u304c\u540c\u671f\u4e2d\u306e\u3068\u304d\u306f\u8b66\u544a
 preferences.dialog.dialogs.warnonlimitedconnectivity=\u63a5\u7d9a\u304c\u5236\u9650\u3055\u308c\u3066\u3044\u308b\u3068\u304d\u306f\u8b66\u544a\uff08\u53d7\u4fe1\u65b9\u5411\u306e\u63a5\u7d9a\u304c\u906e\u65ad\u72b6\u614b\uff09
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=\u30d5\u30a1\u30a4\u30eb\u540d\u306b\u554f\u984c\u306e\u6050\u308c\u304c\u3042\u308b\u3068\u304d\u306f\u8b66\u544a\uff08\u4f8b Apple classic \u306b\u306f\u9577\u3059\u304e\u308b\u540d\u524d\uff09
-preferences.dialog.dyndns.title=DynDNS
-preferences.dialog.dyndnsAutoUpdate=DynDns \u3092\u5e38\u306b\u66f4\u65b0
 preferences.dialog.dyndns=\u81ea\u5206\u306e\uff08\u52d5\u7684\uff09DNS
 preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
+preferences.dialog.dyndns.title=DynDNS
+preferences.dialog.dyndnsAutoUpdate=DynDns \u3092\u5e38\u306b\u66f4\u65b0
 preferences.dialog.dyndnsCurrentIP=\u73fe\u5728\u306e IP\:
 preferences.dialog.dyndnsHostname=\u30db\u30b9\u30c8\u540d\:
-preferences.dialog.dyndnsInfoTabbedPane=DynDns \u60c5\u5831
 preferences.dialog.dyndnsLoginPanel=\u30ed\u30b0\u30a4\u30f3
 preferences.dialog.dyndnsPassword=\u30d1\u30b9\u30ef\u30fc\u30c9\:
 preferences.dialog.dyndnsSettingsTabbedPane=DynDns \u8a2d\u5b9a
 preferences.dialog.dyndnsUpdateButton=\u76f4\u3061\u306b\u66f4\u65b0
 preferences.dialog.dyndnsUpdateError=DynDns \u30b5\u30fc\u30d3\u30b9 \u304b\u3089\u30a8\u30e9\u30fc\u5fdc\u7b54\:
-preferences.dialog.dyndnsUpdateOnStart=\u30b9\u30bf\u30fc\u30c8\u6642\u306b\u66f4\u65b0\:
 preferences.dialog.dyndnsUpdateTitle=DynDns \u30a2\u30c3\u30d7\u30c7\u30fc\u30bf\u30fc
 preferences.dialog.dyndnsUpdateUnknowError=DynDns \u30b5\u30fc\u30d3\u30b9 \u304b\u3089\u672a\u77e5\u306e\u8b66\u544a\u5fdc\u7b54
 preferences.dialog.dyndnsUpdateWarning=DynDns \u30b5\u30fc\u30d3\u30b9 \u304b\u3089\u8b66\u544a\u5fdc\u7b54\:
@@ -711,6 +703,9 @@ startdownloads.description=\u9078\u629e\u3057\u305f\u30c0\u30a6\u30f3\u30ed\u30f
 startdownloads.key=S
 startdownloads.name=\u958b\u304f(S)
 
+##status.download=Down\: %.2f KB/s
+##status.upload=Up\: %.2f KB/s
+
 synchronisation.notice.title={0} \u540c\u671f\u65b9\u5f0f\u306e\u6709\u52b9\u5316
 synchronisation.warning.automatic_deletions=\u3053\u306e\u30e2\u30fc\u30c9\u3067\u306f\u30d5\u30a1\u30a4\u30eb\u524a\u9664\u3082\u540c\u671f\u3055\u308c\u307e\u3059\uff01\n\u3088\u308d\u3057\u3044\u3067\u3059\u304b \uff1f
 synchronisation.warning.automatic_deletions_notice=\u3053\u306e\u540c\u671f\u5f62\u5f0f\u3067\u306f\u30d5\u30a1\u30a4\u30eb\u524a\u9664\u3082\u540c\u671f\u3057\u307e\u3059\uff01
@@ -761,14 +756,6 @@ transfers.to=\u9001\u308a\u5148
 unignorefile.description=\u30d5\u30a1\u30a4\u30eb\u3092\u518d\u3073\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3084\u5171\u6709\u306e\u5bfe\u8c61\u306b\u623b\u3059
 unignorefile.key=U
 unignorefile.name=\u7121\u8996\u5bfe\u8c61\u304b\u3089\u5916\u3059(U)
-
-webservice_request_folder_join.description=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u3078\u306e\u53c2\u52a0\u3092 PowerFolder \u30b5\u30fc\u30d3\u30b9\u306b\u8981\u6c42
-webservice_request_folder_join.key=w
-webservice_request_folder_join.name=WebStore \u3092\u8981\u6c42
-
-webservice_request_folder_leave.description=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306e\u9000\u907f\u3092 PowerFolder \u30b5\u30fc\u30d3\u30b9\u306b\u8981\u6c42
-webservice_request_folder_leave.key=Q
-webservice_request_folder_leave.name=WebStore \u3092\u6b62\u3081\u308b(Q)
 
 wizard.basicsetup.enternick=\u30cb\u30c3\u30af\u30cd\u30fc\u30e0\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 wizard.basicsetup.lanonly=LAN \u5185\u9650\u5b9a
